--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install -r requirements.txt
+      - run: pip install -r KubeSec-master/requirements.txt
       - run: python KubeSec-master/fuzzing.py
